fixed bikes unavail, changed css to make select visible

--- a/flask_app/static/cycleHub.css
+++ b/flask_app/static/cycleHub.css
@@ -284,7 +284,7 @@ label {
 select {
     margin-top: 13px;
     margin-right: 20px;
-    width: 100%;
+    width: 40%;
     border: none;
     font-family: inherit;
     font-size: 17px;
